fixed references with long titles in widget not showing remove button

--- a/res/static/css/backend.css
+++ b/res/static/css/backend.css
@@ -579,6 +579,11 @@ label.STInvalid, .STWidget.STInvalid > .dijitTitlePaneTitle > .dijitTitlePaneTit
 .STDropContainer {
 	width: auto !important;
 	height: auto !important;
+	max-width: 100%;
+}
+
+.STDropContainer > div {
+	max-width: 100%;
 }
 
 .STMenuItem .STDropContainer {
